--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "npm": ">=3"
   },
   "scripts": {
+    "dev": "ts-node-dev --no-deps --transpileOnly -- src/main.ts",
+    "dev:d": "ts-node-dev --no-deps --transpileOnly --inspect -- src/main.ts",
     "test": "npm run eslint && npm run tscheck && npm run test:cov",
     "test:r": "mocha -r ts-node/register/transpile-only src/**/*.spec.ts",
     "test:w": "mocha -r ts-node/register/transpile-only --watch-extensions ts --watch src/**/*.spec.ts",
@@ -25,31 +27,32 @@
     "eslint:fix": "eslint src --ext ts --fix",
     "tslint:fix": "tslint -p tsconfig.json --fix",
     "lint:w": "run-p tsclint:w eslint:w",
-    "semantic-release": "semantic-release",
     "prepublishOnly": "sed -i -e 's/devDependencies/_devDependencies/g' package.json",
     "copySource": "cp -rv src dist && find dist/src -name '*.spec.ts' | xargs rm -f",
     "build": "sh Taskfile build",
-    "remark": "sh Taskfile remark_run",
-    "remark:update": "sh Taskfile remark_run --output",
-    "setupfrontend": "pnpm i -D ng-packagr @angular/core @angular/compiler-cli @angular/compiler tsickle",
     "commit": "git-cz"
   },
-  "keywords": [],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/unlight/node-package-starter.git"
+  "dependencies": {
+    "convict": "4.4.1",
+    "feedparser": "^2.2.9",
+    "got": "^9.6.0",
+    "koa": "2.7.0",
+    "koa-bodyparser": "4.2.1",
+    "koa-compose": "4.1.0",
+    "koa-json-error": "3.1.2",
+    "koa-tree-router": "0.4.5",
+    "njct": "7.1.3"
   },
   "devDependencies": {
-    "@kocal/semantic-release-preset": "^1.1.7",
-    "@semantic-release/changelog": "^3.0.2",
-    "@semantic-release/git": "^7.0.8",
-    "@semantic-release/npm": "^5.1.4",
     "@types/convict": "^4.2.1",
     "@types/expect": "1.X",
+    "@types/feedparser": "^2.2.2",
+    "@types/got": "^9.4.1",
+    "@types/koa": "^2.0.48",
     "@types/mocha": "^5.2.6",
-    "@types/node": "^11.9.4",
-    "@typescript-eslint/eslint-plugin-tslint": "^1.4.0",
-    "@typescript-eslint/parser": "^1.4.0",
+    "@types/node": "^11.9.6",
+    "@typescript-eslint/eslint-plugin-tslint": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
     "eslint": "^5.14.1",
     "eslint-import-resolver-node": "^0.3.2",
     "eslint-plugin-import": "^2.16.0",
@@ -57,27 +60,20 @@
     "eslint-plugin-unicorn": "^7.1.0",
     "expect": "1.X",
     "inotifywait-win32": "^1.0.0",
-    "mocha": "^6.0.0",
+    "mocha": "^6.0.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^13.3.0",
-    "remark": "^10.0.1",
-    "remark-cli": "^6.0.1",
-    "remark-license": "^5.0.1",
-    "remark-toc": "^5.1.1",
-    "semantic-release": "^15.13.3",
     "ts-node": "^8.0.2",
-    "tslint": "^5.12.1",
+    "ts-node-dev": "^1.0.0-pre.32",
+    "tslint": "^5.13.1",
     "tslint-clean-code": "^0.2.9",
     "tslint-microsoft-contrib": "^6.0.0",
     "tslint-sonarts": "^1.9.0",
-    "typescript": "~3.3.3"
+    "typescript": "~3.3.3333"
   },
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
-  },
-  "dependencies": {
-    "convict": "^4.4.1"
   }
 }
