--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "dev": "ts-node-dev --no-deps --transpileOnly -- src/main.ts",
     "dev:d": "ts-node-dev --no-deps --transpileOnly --inspect -- src/main.ts",
     "test": "npm run eslint && npm run tscheck && npm run test:cov",
-    "test:r": "mocha -r ts-node/register/transpile-only src/**/*.spec.ts",
-    "test:w": "mocha -r ts-node/register/transpile-only --watch-extensions ts --watch src/**/*.spec.ts",
+    "test:r": "mocha -r ts-node/register/transpile-only --timeout 8s src/**/*.spec.ts",
+    "test:w": "mocha -r ts-node/register/transpile-only --timeout 8s --watch-extensions ts --watch src/**/*.spec.ts",
     "test:cov": "nyc mocha src/**/*.spec.ts",
     "test:d": "node --inspect-brk -r ts-node/register/transpile-only node_modules/mocha/bin/_mocha --no-timeouts --watch-extensions ts --watch src/**/*.spec.ts",
     "tscheck": "echo tscheck... && tsc --noEmit",
@@ -41,6 +41,7 @@
     "koa-compose": "4.1.0",
     "koa-json-error": "3.1.2",
     "koa-tree-router": "0.4.5",
+    "mongodb": "^3.1.13",
     "njct": "7.1.3"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "@types/got": "^9.4.1",
     "@types/koa": "^2.0.48",
     "@types/mocha": "^5.2.6",
+    "@types/mongodb": "^3.1.19",
     "@types/node": "^11.9.6",
     "@typescript-eslint/eslint-plugin-tslint": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
