--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   "dependencies": {
     "convict": "4.4.1",
     "feedparser": "^2.2.9",
-    "fluent-ts-validator": "^3.0.2",
     "got": "^9.6.0",
+    "joi": "^14.3.1",
     "koa": "2.7.0",
     "koa-bodyparser": "4.2.1",
     "koa-compose": "4.1.0",
@@ -50,6 +50,7 @@
     "@types/expect": "1.X",
     "@types/feedparser": "^2.2.2",
     "@types/got": "^9.4.1",
+    "@types/joi": "^14.3.2",
     "@types/koa": "^2.0.48",
     "@types/mocha": "^5.2.6",
     "@types/mongodb": "^3.1.19",
