--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "dev": "ts-node-dev --no-deps --transpileOnly -- src/main.ts",
     "dev:d": "ts-node-dev --no-deps --transpileOnly --inspect -- src/main.ts",
     "test": "npm run eslint && npm run tscheck && npm run test:cov",
-    "test:r": "mocha -r ts-node/register/transpile-only --timeout 8s src/**/*.spec.ts",
-    "test:w": "mocha -r ts-node/register/transpile-only --timeout 8s --watch-extensions ts --watch src/**/*.spec.ts",
+    "test:r": "mocha -r ts-node/register/transpile-only -r reflect-metadata --timeout 8s src/**/*.spec.ts",
+    "test:w": "mocha -r ts-node/register/transpile-only -r reflect-metadata --timeout 8s --watch-extensions ts --watch src/**/*.spec.ts",
     "test:cov": "nyc mocha src/**/*.spec.ts",
     "test:d": "node --inspect-brk -r ts-node/register/transpile-only node_modules/mocha/bin/_mocha --no-timeouts --watch-extensions ts --watch src/**/*.spec.ts",
     "tscheck": "echo tscheck... && tsc --noEmit",
@@ -33,25 +33,27 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "class-transformer": "^0.2.0",
+    "class-validator": "^0.9.1",
     "convict": "4.4.1",
     "feedparser": "^2.2.9",
     "got": "^9.6.0",
-    "joi": "^14.3.1",
     "koa": "2.7.0",
     "koa-bodyparser": "4.2.1",
     "koa-compose": "4.1.0",
     "koa-json-error": "3.1.2",
     "koa-tree-router": "0.4.5",
     "mongodb": "^3.1.13",
-    "njct": "7.1.3"
+    "njct": "7.1.3",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@types/convict": "^4.2.1",
     "@types/expect": "1.X",
     "@types/feedparser": "^2.2.2",
     "@types/got": "^9.4.1",
-    "@types/joi": "^14.3.2",
     "@types/koa": "^2.0.48",
+    "@types/koa-json-error": "^3.1.2",
     "@types/mocha": "^5.2.6",
     "@types/mongodb": "^3.1.19",
     "@types/node": "^11.9.6",
