--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "dev": "ts-node-dev --no-deps --transpileOnly -- src/main.ts",
     "dev:d": "ts-node-dev --no-deps --transpileOnly --inspect -- src/main.ts",
     "test": "npm run eslint && npm run tscheck && npm run test:cov",
-    "test:r": "mocha -r ts-node/register/transpile-only -r reflect-metadata --timeout 8s src/**/*.spec.ts",
-    "test:w": "mocha -r ts-node/register/transpile-only -r reflect-metadata --timeout 8s --watch-extensions ts --watch src/**/*.spec.ts",
+    "test:r": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r reflect-metadata --timeout 8s src/**/*.spec.ts",
+    "test:w": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r reflect-metadata --timeout 8s --watch-extensions ts --watch src/**/*.spec.ts",
     "test:cov": "nyc mocha src/**/*.spec.ts",
     "test:d": "node --inspect-brk -r ts-node/register/transpile-only node_modules/mocha/bin/_mocha --no-timeouts --watch-extensions ts --watch src/**/*.spec.ts",
     "tscheck": "echo tscheck... && tsc --noEmit",
@@ -33,6 +33,7 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "await-to-js": "^2.1.1",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "convict": "4.4.1",
@@ -66,6 +67,8 @@
     "eslint-plugin-unicorn": "^7.1.0",
     "expect": "1.X",
     "inotifywait-win32": "^1.0.0",
+    "koa-preuse": "0.0.0",
+    "koa-sham": "0.0.5",
     "mocha": "^6.0.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^13.3.0",
