--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "inotifywait-win32": "^1.0.0",
     "koa-preuse": "0.0.0",
     "koa-sham": "0.0.5",
+    "loud-rejection": "^1.6.0",
     "mocha": "^6.0.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^13.3.0",
