--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/expect": "1.X",
     "@types/feedparser": "^2.2.2",
     "@types/got": "^9.4.1",
+    "@types/into-stream": "^3.1.0",
     "@types/koa": "^2.0.48",
     "@types/koa-json-error": "^3.1.2",
     "@types/mocha": "^5.2.6",
@@ -67,6 +68,7 @@
     "eslint-plugin-unicorn": "^7.1.0",
     "expect": "1.X",
     "inotifywait-win32": "^1.0.0",
+    "into-stream": "^4.0.0",
     "koa-preuse": "0.0.0",
     "koa-sham": "0.0.5",
     "loud-rejection": "^1.6.0",
