--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-package-starter",
+  "name": "webhive",
   "version": "0.0.0-dev",
   "license": "MIT",
   "description": "",
@@ -33,20 +33,20 @@
     "commit": "git-cz"
   },
   "dependencies": {
-    "await-to-js": "^2.1.1",
-    "class-transformer": "^0.2.0",
-    "class-validator": "^0.9.1",
+    "await-to-js": "2.1.1",
+    "class-transformer": "0.2.0",
+    "class-validator": "0.9.1",
     "convict": "4.4.1",
-    "feedparser": "^2.2.9",
-    "got": "^9.6.0",
+    "feedparser": "2.2.9",
+    "got": "9.6.0",
     "koa": "2.7.0",
     "koa-bodyparser": "4.2.1",
     "koa-compose": "4.1.0",
     "koa-json-error": "3.1.2",
     "koa-tree-router": "0.4.5",
-    "mongodb": "^3.1.13",
+    "mongodb": "3.1.13",
     "njct": "7.1.3",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
     "@types/convict": "^4.2.1",
@@ -57,11 +57,11 @@
     "@types/koa": "^2.0.48",
     "@types/koa-json-error": "^3.1.2",
     "@types/mocha": "^5.2.6",
-    "@types/mongodb": "^3.1.19",
-    "@types/node": "^11.9.6",
+    "@types/mongodb": "^3.1.20",
+    "@types/node": "^11.10.4",
     "@typescript-eslint/eslint-plugin-tslint": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
-    "eslint": "^5.14.1",
+    "eslint": "^5.15.0",
     "eslint-import-resolver-node": "^0.3.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-tslint": "^3.1.0",
