--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "koa-sham": "0.0.5",
     "loud-rejection": "^1.6.0",
     "mocha": "^6.0.2",
+    "mockodb": "^0.6.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^13.3.0",
     "ts-node": "^8.0.2",
