--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "npm": ">=3"
   },
   "scripts": {
-    "dev": "ts-node-dev --no-deps --transpileOnly -- src/main.ts",
-    "dev:d": "ts-node-dev --no-deps --transpileOnly --inspect -- src/main.ts",
+    "dev": "run-p dev:api dev:web test:w",
+    "dev:api": "ts-node-dev --no-deps --transpileOnly -- src/webhive.api/main.ts",
+    "dev:api:d": "ts-node-dev --no-deps --transpileOnly --inspect -- src/webhive.api/main.ts",
+    "dev:web": "ts-node-dev --no-deps --transpileOnly -- src/webhive.web/main.ts",
     "test": "npm run eslint && npm run tscheck && npm run test:cov",
     "test:r": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r reflect-metadata --timeout 8s src/**/*.spec.ts",
     "test:w": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r reflect-metadata --timeout 8s --watch-extensions ts --watch src/**/*.spec.ts",
@@ -45,10 +47,11 @@
     "koa-compose": "4.1.0",
     "koa-json-error": "3.1.2",
     "koa-tree-router": "0.4.5",
+    "loud-rejection": "^1.6.0",
     "mongodb": "3.1.13",
     "njct": "7.1.3",
-    "loud-rejection": "^1.6.0",
-    "reflect-metadata": "0.1.13"
+    "reflect-metadata": "0.1.13",
+    "ucfirst": "^1.0.0"
   },
   "devDependencies": {
     "@types/convict": "^4.2.1",
