--- a/package.json
+++ b/package.json
@@ -45,22 +45,32 @@
     "koa": "2.7.0",
     "koa-bodyparser": "4.2.1",
     "koa-compose": "4.1.0",
+    "koa-favicon": "^2.0.1",
     "koa-json-error": "3.1.2",
+    "koa-static": "^5.0.0",
     "koa-tree-router": "0.4.5",
     "loud-rejection": "^1.6.0",
     "mongodb": "3.1.13",
     "njct": "7.1.3",
     "reflect-metadata": "0.1.13",
-    "ucfirst": "^1.0.0"
+    "tinydate": "^1.0.1",
+    "ucfirst": "^1.0.0",
+    "vhtml": "^2.1.0"
   },
   "devDependencies": {
     "@types/convict": "^4.2.1",
+    "@types/eslint": "^4.16.6",
     "@types/expect": "1.X",
     "@types/feedparser": "^2.2.2",
     "@types/got": "^9.4.1",
     "@types/into-stream": "^3.1.0",
     "@types/koa": "^2.0.48",
+    "@types/koa-bodyparser": "4.2.2",
+    "@types/koa-compose": "3.2.3",
+    "@types/koa-favicon": "^2.0.19",
     "@types/koa-json-error": "^3.1.2",
+    "@types/koa-static": "^4.0.1",
+    "@types/loud-rejection": "^1.6.0",
     "@types/mocha": "^5.2.6",
     "@types/mongodb": "^3.1.20",
     "@types/node": "^11.10.4",
