--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "eslint-plugin-tslint": "^3.1.0",
     "eslint-plugin-unicorn": "^7.1.0",
     "expect": "1.X",
+    "html-entities": "^1.2.1",
     "inotifywait-win32": "^1.0.0",
     "into-stream": "^4.0.0",
     "koa-preuse": "0.0.0",
