--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/expect": "1.X",
     "@types/feedparser": "^2.2.2",
     "@types/got": "^9.4.1",
+    "@types/html-entities": "^1.2.16",
     "@types/into-stream": "^3.1.0",
     "@types/koa": "^2.0.48",
     "@types/koa-bodyparser": "4.2.2",
@@ -71,6 +72,7 @@
     "@types/koa-json-error": "^3.1.2",
     "@types/koa-static": "^4.0.1",
     "@types/loud-rejection": "^1.6.0",
+    "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.6",
     "@types/mongodb": "^3.1.20",
     "@types/node": "^11.10.4",
@@ -87,6 +89,7 @@
     "into-stream": "^4.0.0",
     "koa-preuse": "0.0.0",
     "koa-sham": "0.0.5",
+    "minimist": "^1.2.0",
     "mocha": "^6.0.2",
     "mockodb": "^0.6.1",
     "npm-run-all": "^4.1.5",
