--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lint:w": "run-p tsclint:w eslint:w",
     "prepublishOnly": "sed -i -e 's/devDependencies/_devDependencies/g' package.json",
     "copySource": "cp -rv src dist && find dist/src -name '*.spec.ts' | xargs rm -f",
-    "build": "echo build",
+    "build": "tsc",
     "commit": "git-cz",
     "heroku-postbuild": "echo Skip build on Heroku"
   },
@@ -44,18 +44,17 @@
     "got": "9.6.0",
     "koa": "2.7.0",
     "koa-bodyparser": "4.2.1",
-    "koa-compose": "4.1.0",
-    "koa-favicon": "^2.0.1",
+    "koa-favicon": "2.0.1",
     "koa-json-error": "3.1.2",
-    "koa-static": "^5.0.0",
+    "koa-static": "5.0.0",
     "koa-tree-router": "0.4.5",
-    "loud-rejection": "^1.6.0",
+    "loud-rejection": "1.6.0",
     "mongodb": "3.1.13",
     "njct": "7.1.3",
     "reflect-metadata": "0.1.13",
-    "tinydate": "^1.0.1",
-    "ucfirst": "^1.0.0",
-    "vhtml": "^2.1.0"
+    "tinydate": "1.0.1",
+    "ucfirst": "1.0.0",
+    "vhtml": "2.1.0"
   },
   "devDependencies": {
     "@types/convict": "^4.2.1",
@@ -67,7 +66,6 @@
     "@types/into-stream": "^3.1.0",
     "@types/koa": "^2.0.48",
     "@types/koa-bodyparser": "4.2.2",
-    "@types/koa-compose": "3.2.3",
     "@types/koa-favicon": "^2.0.19",
     "@types/koa-json-error": "^3.1.2",
     "@types/koa-static": "^4.0.1",
