--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "copySource": "cp -rv src dist && find dist/src -name '*.spec.ts' | xargs rm -f",
     "build": "tsc",
     "commit": "git-cz",
-    "heroku-postbuild": "echo Skip build on Heroku"
+    "heroku-postbuild": "echo Skip build on Heroku",
+    "rebuild_lock": "rm package-lock.json && npm prune && npm install"
   },
   "dependencies": {
     "await-to-js": "2.1.1",
@@ -54,7 +55,8 @@
     "reflect-metadata": "0.1.13",
     "tinydate": "1.0.1",
     "ucfirst": "1.0.0",
-    "vhtml": "2.1.0"
+    "vhtml": "2.1.0",
+    "yargs": "13.2.2"
   },
   "devDependencies": {
     "@types/convict": "^4.2.1",
@@ -70,7 +72,6 @@
     "@types/koa-json-error": "^3.1.2",
     "@types/koa-static": "^4.0.1",
     "@types/loud-rejection": "^1.6.0",
-    "@types/minimist": "^1.2.0",
     "@types/mocha": "^5.2.6",
     "@types/mongodb": "^3.1.20",
     "@types/node": "^11.10.4",
@@ -87,7 +88,6 @@
     "into-stream": "^4.0.0",
     "koa-preuse": "0.0.0",
     "koa-sham": "0.0.5",
-    "minimist": "^1.2.0",
     "mocha": "^6.0.2",
     "mockodb": "^0.6.1",
     "npm-run-all": "^4.1.5",
