chore: Replaced reflect-metadata by @abraham/reflection

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -12,7 +12,7 @@
     ".tsx"
   ],
   "require": [
-    "reflect-metadata",
+    "@abraham/reflection",
     "ts-node/register/transpile-only"
   ],
   "reporter": [
