--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "dev:api:d": "ts-node-dev --no-deps --transpileOnly --inspect -- src/webhive.api/main.ts",
     "dev:web": "ts-node-dev --no-deps --transpileOnly -- src/webhive.web/main.ts",
     "test": "npm run eslint && npm run tscheck && npm run test:cov",
-    "test:r": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r reflect-metadata --timeout 8s src/**/*.spec.ts",
-    "test:w": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r reflect-metadata --timeout 8s --watch-extensions ts --watch src/**/*.spec.ts",
+    "test:r": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r @abraham/reflection --timeout 8s src/**/*.spec.ts",
+    "test:w": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r @abraham/reflection --timeout 8s --watch-extensions ts --watch src/**/*.spec.ts",
     "test:cov": "nyc mocha src/**/*.spec.ts",
-    "test:d": "node --inspect-brk -r ts-node/register/transpile-only -r reflect-metadata node_modules/mocha/bin/_mocha --no-timeouts --watch-extensions ts --watch src/**/*.spec.ts",
+    "test:d": "node --inspect-brk -r ts-node/register/transpile-only -r @abraham/reflection node_modules/mocha/bin/_mocha --no-timeouts --watch-extensions ts --watch src/**/*.spec.ts",
     "tscheck": "echo tscheck... && tsc --noEmit",
     "tscheck:w": "npm run tscheck -- --watch",
     "tsclint": "tsc --noEmit --strict --forceConsistentCasingInFileNames --noImplicitReturns --noImplicitThis --noUnusedLocals --noUnusedParameters",
@@ -37,6 +37,7 @@
     "rebuild_lock": "rm package-lock.json && npm prune && npm install"
   },
   "dependencies": {
+    "@abraham/reflection": "0.5.1",
     "await-to-js": "2.1.1",
     "class-transformer": "0.2.0",
     "class-validator": "0.9.1",
@@ -52,7 +53,6 @@
     "loud-rejection": "1.6.0",
     "mongodb": "3.1.13",
     "njct": "7.1.3",
-    "reflect-metadata": "0.1.13",
     "tinydate": "1.0.1",
     "ucfirst": "1.0.0",
     "vhtml": "2.1.0",
