--- a/package.json
+++ b/package.json
@@ -74,7 +74,9 @@
     "@types/loud-rejection": "^1.6.0",
     "@types/mocha": "^5.2.6",
     "@types/mongodb": "^3.1.20",
+    "@types/mongodb-memory-server": "1.8.0",
     "@types/node": "^11.10.4",
+    "@types/yargs": "12.0.9",
     "@typescript-eslint/eslint-plugin-tslint": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
     "eslint": "^5.15.0",
@@ -89,7 +91,7 @@
     "koa-preuse": "0.0.0",
     "koa-sham": "0.0.5",
     "mocha": "^6.0.2",
-    "mockodb": "^0.6.1",
+    "mongodb-memory-server": "3.1.2",
     "npm-run-all": "^4.1.5",
     "nyc": "^13.3.0",
     "ts-node": "^8.0.2",
