--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "build": "tsc",
     "commit": "git-cz",
     "heroku-postbuild": "echo Skip build on Heroku",
-    "rebuild_lock": "rm package-lock.json && npm prune && npm install"
+    "rebuild_lock": "rm package-lock.json && npm prune && npm install",
+    "typesync": "npx typesync"
   },
   "dependencies": {
     "@abraham/reflection": "0.5.1",
@@ -52,6 +53,7 @@
     "koa-tree-router": "0.4.5",
     "loud-rejection": "1.6.0",
     "mongodb": "3.1.13",
+    "ms": "2.1.1",
     "njct": "7.1.3",
     "tinydate": "1.0.1",
     "ucfirst": "1.0.0",
@@ -75,6 +77,7 @@
     "@types/mocha": "^5.2.6",
     "@types/mongodb": "^3.1.20",
     "@types/mongodb-memory-server": "1.8.0",
+    "@types/ms": "0.7.30",
     "@types/node": "^11.10.4",
     "@types/yargs": "12.0.9",
     "@typescript-eslint/eslint-plugin-tslint": "^1.4.2",
@@ -100,8 +103,7 @@
     "tslint-clean-code": "^0.2.9",
     "tslint-microsoft-contrib": "^6.0.0",
     "tslint-sonarts": "^1.9.0",
-    "typescript": "~3.3.3333",
-    "universal-mock": "^1.1.0"
+    "typescript": "~3.3.3333"
   },
   "config": {
     "commitizen": {
