--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-transformer": "0.2.0",
     "class-validator": "0.9.1",
     "convict": "4.4.1",
+    "dayjs": "1.8.10",
     "feedparser": "2.2.9",
     "got": "9.6.0",
     "koa": "2.7.0",
@@ -55,7 +56,6 @@
     "mongodb": "3.1.13",
     "ms": "2.1.1",
     "njct": "7.1.3",
-    "tinydate": "1.0.1",
     "ucfirst": "1.0.0",
     "vhtml": "2.1.0",
     "yargs": "13.2.2"
