--- a/package.json
+++ b/package.json
@@ -52,11 +52,10 @@
     "koa-mount": "4.0.0",
     "koa-static": "5.0.0",
     "koa-tree-router": "0.4.5",
-    "loud-rejection": "1.6.0",
+    "longjohn": "0.2.12",
     "mongodb": "3.1.13",
     "ms": "2.1.1",
     "njct": "7.1.3",
-    "ucfirst": "1.0.0",
     "vhtml": "2.1.0",
     "yargs": "13.2.2"
   },
