--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@abraham/reflection": "0.5.1",
+    "apollo-server-koa": "2.4.8",
     "await-to-js": "2.1.1",
     "class-transformer": "0.2.0",
     "class-validator": "0.9.1",
@@ -45,6 +46,8 @@
     "dayjs": "1.8.12",
     "feedparser": "2.2.9",
     "got": "9.6.0",
+    "graphql": "14.2.1",
+    "graphql-tools": "4.0.4",
     "koa": "2.7.0",
     "koa-bodyparser": "4.2.1",
     "koa-favicon": "2.0.1",
@@ -65,6 +68,7 @@
     "@types/expect": "1.X",
     "@types/feedparser": "^2.2.2",
     "@types/got": "^9.4.1",
+    "@types/graphql": "14.2.0",
     "@types/html-entities": "^1.2.16",
     "@types/koa": "^2.0.48",
     "@types/koa-bodyparser": "4.2.2",
