--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "dev": "run-p dev:web",
+    "harvest:d": "node --inspect-brk -r ts-node/register/transpile-only src/webhive.harvest/program.ts --ant=webplatformnews",
     "dev:api": "ts-node-dev --no-deps --transpileOnly -- src/webhive.api/main.ts",
     "dev:api:d": "ts-node-dev --no-deps --transpileOnly --inspect -- src/webhive.api/main.ts",
     "dev:web": "ts-node-dev --no-deps --transpileOnly -- src/webhive.web/main.ts",
@@ -56,6 +57,7 @@
     "mongodb": "3.2.2",
     "ms": "2.1.1",
     "njct": "7.1.3",
+    "striptags": "3.1.1",
     "vhtml": "2.1.0",
     "yargs": "13.2.2"
   },
