--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "dev:api": "ts-node-dev --no-deps --transpileOnly -- src/webhive.api/main.ts",
     "dev:api:d": "ts-node-dev --no-deps --transpileOnly --inspect -- src/webhive.api/main.ts",
     "dev:web": "ts-node-dev --no-deps --transpileOnly -- src/webhive.web/main.ts",
-    "test": "npm run eslint && npm run tscheck && npm run test:cov",
+    "test": "npm run eslint && npm run tscheck && npm run test:cov && npm run typecov",
     "test:r": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r @abraham/reflection --timeout 8s src/**/*.spec.ts",
     "test:w": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r @abraham/reflection --timeout 8s --watch-extensions ts --watch src/**/*.spec.ts",
-    "test:cov": "nyc mocha src/**/*.spec.ts",
+    "test:cov": "nyc mocha --timeout 8s src/**/*.spec.ts",
+    "typecov": "type-coverage --detail",
     "test:d": "node --inspect-brk -r ts-node/register/transpile-only -r @abraham/reflection node_modules/mocha/bin/_mocha --no-timeouts --watch-extensions ts --watch src/**/*.spec.ts",
     "tscheck": "echo tscheck... && tsc --noEmit",
     "tscheck:w": "npm run tscheck -- --watch",
     "tsclint": "tsc --noEmit --strict --forceConsistentCasingInFileNames --noImplicitReturns --noImplicitThis --noUnusedLocals --noUnusedParameters",
     "tsclint:w": "npm run tsclint -- --watch",
-    "eslint:w": "sh Taskfile eslint_watch",
+    "eslint:w": "watchexec -w src \"npm run eslint\"",
     "eslint": "eslint src --ext ts",
     "eslint:fix": "eslint src --ext ts --fix",
     "tslint:fix": "tslint -p tsconfig.json --fix",
@@ -40,10 +41,10 @@
   "dependencies": {
     "@abraham/reflection": "0.5.1",
     "await-to-js": "2.1.1",
-    "class-transformer": "0.2.0",
+    "class-transformer": "0.2.3",
     "class-validator": "0.9.1",
-    "convict": "4.4.1",
-    "dayjs": "1.8.12",
+    "convict": "5.0.0",
+    "dayjs": "1.8.14",
     "feedparser": "2.2.9",
     "got": "9.6.0",
     "koa": "2.7.0",
@@ -54,56 +55,55 @@
     "koa-static": "5.0.0",
     "koa-tree-router": "0.4.6",
     "longjohn": "0.2.12",
-    "mongodb": "3.2.2",
+    "mongodb": "3.2.6",
     "ms": "2.1.1",
     "njct": "7.1.3",
     "striptags": "3.1.1",
     "vhtml": "2.1.0",
-    "yargs": "13.2.2"
+    "yargs": "13.2.4"
   },
   "devDependencies": {
     "@types/convict": "^4.2.1",
     "@types/eslint": "^4.16.6",
     "@types/expect": "1.X",
     "@types/feedparser": "^2.2.2",
-    "@types/got": "^9.4.1",
+    "@types/got": "^9.4.4",
     "@types/html-entities": "^1.2.16",
     "@types/koa": "^2.0.48",
-    "@types/koa-bodyparser": "4.2.2",
+    "@types/koa-bodyparser": "4.3.0",
     "@types/koa-favicon": "^2.0.19",
     "@types/koa-json-error": "^3.1.2",
     "@types/koa-mount": "3.0.1",
     "@types/koa-static": "^4.0.1",
-    "@types/mocha": "^5.2.6",
-    "@types/mongodb": "^3.1.22",
-    "@types/mongodb-memory-server": "1.8.0",
+    "@types/mocha": "^5.2.7",
+    "@types/mongodb": "^3.1.28",
     "@types/ms": "0.7.30",
-    "@types/node": "^11.13.0",
-    "@types/yargs": "12.0.11",
-    "@typescript-eslint/eslint-plugin-tslint": "^1.6.0",
-    "@typescript-eslint/parser": "^1.6.0",
+    "@types/node": "^12.0.4",
+    "@types/yargs": "13.0.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
     "eslint": "^5.16.0",
     "eslint-import-resolver-node": "^0.3.2",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-tslint": "^3.1.0",
-    "eslint-plugin-unicorn": "^8.0.1",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-unicorn": "^9.0.0",
     "expect": "1.X",
     "html-entities": "^1.2.1",
-    "inotifywait-win32": "^1.0.0",
     "into-stream": "^5.1.0",
     "koa-preuse": "0.0.0",
     "koa-sham": "0.0.7",
-    "mocha": "^6.0.2",
-    "mongodb-memory-server": "4.2.1",
+    "mocha": "^6.1.4",
+    "mongodb-memory-server": "5.1.2",
     "npm-run-all": "^4.1.5",
-    "nyc": "^13.3.0",
-    "ts-node": "^8.0.3",
-    "ts-node-dev": "^1.0.0-pre.32",
-    "tslint": "^5.15.0",
+    "nyc": "^14.1.1",
+    "ts-node": "^8.2.0",
+    "ts-node-dev": "^1.0.0-pre.39",
+    "tslint": "^5.17.0",
     "tslint-clean-code": "^0.2.9",
-    "tslint-microsoft-contrib": "^6.1.0",
+    "tslint-microsoft-contrib": "^6.2.0",
     "tslint-sonarts": "^1.9.0",
-    "typescript": "~3.4.1"
+    "typescript": "~3.5.1",
+    "type-coverage": "^2.0.2",
+    "watchexec-bin": "1.0.0"
   },
   "config": {
     "commitizen": {
