--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 node_modules
-/.idea
-/.awcache
-/.vscode
-/.nyc_output
+.idea
+.awcache
+.vscode
+.nyc_output
 *.log
 ~*
-/dist/
-/dist_*
-/.rts2_cache_*
+dist/
+dist_*
+.rts2_cache_*
