--- a/src/webhive.frontend/tsconfig.json
+++ b/src/webhive.frontend/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "strict": true,
+    "esModuleInterop": true,
     "noImplicitAny": false,
     "experimentalDecorators": false,
     "emitDecoratorMetadata": false,
