--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -4,11 +4,15 @@
     "dev": "webpack-dev-server"
   },
   "dependencies": {
-    "load-script": "^1.0.0",
+    "@shinin/load-script": "^1.0.4",
     "page": "^1.11.4"
   },
   "devDependencies": {
+    "@types/html-webpack-plugin": "^3.2.0",
     "@types/page": "^1.8.0",
+    "@types/webpack": "^4.4.32",
+    "@types/webpack-dev-server": "^3.1.6",
+    "@types/webpack-env": "^1.13.9",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
