--- a/src/webhive.frontend/tsconfig.json
+++ b/src/webhive.frontend/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es2015",
+    "target": "es2017",
     "module": "commonjs",
     "moduleResolution": "node",
     "importHelpers": true,
     "strict": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
     "noImplicitAny": false,
     "experimentalDecorators": false,
     "emitDecoratorMetadata": false,
