--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -13,9 +13,11 @@
     "@types/webpack": "^4.4.32",
     "@types/webpack-dev-server": "^3.1.6",
     "@types/webpack-env": "^1.13.9",
+    "css-loader": "^2.1.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "ts-loader": "^6.0.2",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
