--- a/src/webhive.frontend/page.search/package.json
+++ b/src/webhive.frontend/page.search/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "custom-elements-ts": "0.0.16"
+    "custom-elements-ts": "0.0.16",
+    "ts-loader": "^6.0.2",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3",
+    "webpack-dev-server": "^3.7.1"
   }
 }
