--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -5,7 +5,7 @@
   },
   "dependencies": {
     "@shinin/load-script": "^1.0.4",
-    "page": "^1.11.4"
+    "a-wc-router": "^1.1.1"
   },
   "devDependencies": {
     "@types/html-webpack-plugin": "^3.2.0",
@@ -13,15 +13,15 @@
     "@types/webpack": "^4.4.32",
     "@types/webpack-dev-server": "^3.1.6",
     "@types/webpack-env": "^1.13.9",
-    "css-loader": "^2.1.1",
+    "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-loader": "^6.0.2",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.5.1"
+    "webpack": "^4.34.0",
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.1"
   }
 }
