--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@shinin/load-script": "^1.0.4",
     "cherrytree": "^2.4.1"
   },
   "devDependencies": {
     "add-asset-html-webpack-plugin": "^3.1.3",
+    "css-loader": "^3.0.0",
+    "file-loader": "^4.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "ts-loader": "^6.0.3",
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4",
