--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@shinin/load-script": "^1.0.4",
+    "preact": "^8.4.2",
     "space-router": "^0.7.0",
     "vhtml": "^2.1.0"
   },
