--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -8,27 +8,26 @@
     "tscheck:w": "npm run tscheck -- --watch"
   },
   "dependencies": {
-    "@shinin/load-script": "^1.0.4",
-    "preact": "^10.0.0-beta.3",
-    "space-router": "^0.7.0",
-    "tsx-create-html-element": "^1.3.0"
+    "@shinin/load-script": "1.0.4",
+    "preact": "10.0.0-beta.3",
+    "space-router": "0.7.0"
   },
   "devDependencies": {
-    "@types/html-webpack-plugin": "^3.2.0",
-    "@types/page": "^1.8.0",
-    "@types/webpack": "^4.4.34",
-    "@types/webpack-dev-server": "^3.1.6",
-    "@types/webpack-env": "^1.13.9",
-    "css-loader": "^3.0.0",
-    "file-loader": "^4.0.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^0.23.1",
-    "ts-loader": "^6.0.2",
-    "typescript": "^3.5.2",
-    "webpack": "^4.34.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.1"
+    "@types/html-webpack-plugin": "3.2.0",
+    "@types/page": "1.8.0",
+    "@types/webpack": "4.4.34",
+    "@types/webpack-dev-server": "3.1.6",
+    "@types/webpack-env": "1.13.9",
+    "css-loader": "3.0.0",
+    "file-loader": "4.0.0",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
+    "source-map-loader": "0.2.4",
+    "style-loader": "0.23.1",
+    "ts-loader": "6.0.2",
+    "typescript": "3.5.2",
+    "webpack": "4.34.0",
+    "webpack-cli": "3.3.4",
+    "webpack-dev-server": "3.7.1"
   }
 }
