--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@shinin/load-script": "1.0.4",
+    "custom-elements-ts": "0.0.16",
     "main-loop": "3.4.0",
     "preact": "10.0.0-beta.3",
     "space-router": "0.7.0",
