--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -25,6 +25,7 @@
     "file-loader": "4.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
+    "script-ext-html-webpack-plugin": "2.1.3",
     "source-map-loader": "0.2.4",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.3.0",
