--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -22,6 +22,7 @@
     "@types/webpack-dev-server": "3.1.6",
     "@types/webpack-env": "1.13.9",
     "css-loader": "3.0.0",
+    "extract-loader": "3.1.0",
     "file-loader": "4.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
