--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "@shinin/load-script": "1.0.4",
     "custom-elements-ts": "0.0.16",
+    "h-document-element": "2.0.0",
     "main-loop": "3.4.0",
     "space-router": "0.7.0",
-    "tsx-create-html-element": "1.3.0",
     "virtual-dom": "2.1.1"
   },
   "devDependencies": {
