--- a/src/webhive.frontend/tsconfig.json
+++ b/src/webhive.frontend/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2017",
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
     "strict": true,
