--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -8,6 +8,7 @@
     "tscheck:w": "npm run tscheck -- --watch"
   },
   "dependencies": {
+    "@paciolan/remote-module-loader": "2.2.4",
     "@shinin/load-script": "1.0.4",
     "custom-elements-ts": "0.0.16",
     "h-document-element": "2.0.0",
