--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -14,6 +14,7 @@
     "h-document-element": "2.0.0",
     "main-loop": "3.4.0",
     "space-router": "0.7.0",
+    "tslib": "1.10.0",
     "virtual-dom": "2.1.1"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "file-loader": "4.0.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
+    "optimize-css-assets-webpack-plugin": "5.0.3",
     "script-ext-html-webpack-plugin": "2.1.3",
     "source-map-loader": "0.2.4",
     "style-loader": "0.23.1",
