--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -11,6 +11,7 @@
     "@paciolan/remote-module-loader": "2.4.0",
     "@shinin/load-script": "1.0.4",
     "custom-elements-ts": "0.0.16",
+    "dimport": "1.0.0",
     "h-document-element": "2.0.0",
     "main-loop": "3.4.0",
     "space-router": "0.7.0",
@@ -18,6 +19,7 @@
     "virtual-dom": "2.1.1"
   },
   "devDependencies": {
+    "@purtuga/esm-webpack-plugin": "1.1.1",
     "@types/html-webpack-plugin": "3.2.1",
     "@types/page": "1.8.0",
     "@types/webpack": "4.32.1",
