Added preact to entry-list component

--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -8,21 +8,18 @@
     "tscheck:w": "npm run tscheck -- --watch"
   },
   "dependencies": {
-    "@paciolan/remote-module-loader": "2.4.0",
-    "@shinin/load-script": "1.0.4",
     "custom-elements-ts": "0.0.16",
     "dimport": "1.0.0",
     "h-document-element": "2.0.0",
-    "main-loop": "3.4.0",
+    "preact": "10.0.0-rc.1",
     "space-router": "0.7.0",
-    "tslib": "1.10.0",
-    "virtual-dom": "2.1.1"
+    "tslib": "1.10.0"
   },
   "devDependencies": {
     "@purtuga/esm-webpack-plugin": "1.1.1",
     "@types/html-webpack-plugin": "3.2.1",
     "@types/page": "1.8.0",
-    "@types/webpack": "4.32.1",
+    "@types/webpack": "4.39.1",
     "@types/webpack-dev-server": "3.1.7",
     "@types/webpack-env": "1.14.0",
     "css-loader": "3.2.0",
@@ -33,12 +30,13 @@
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "script-ext-html-webpack-plugin": "2.1.4",
     "source-map-loader": "0.2.4",
+    "static-import-webpack-plugin": "file:../../../static-import-webpack-plugin/dist",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-loader": "6.0.4",
-    "typescript": "3.5.3",
-    "webpack": "4.39.1",
-    "webpack-cli": "3.3.6",
+    "typescript": "3.6.2",
+    "webpack": "4.39.3",
+    "webpack-cli": "3.3.7",
     "webpack-dev-server": "3.8.0"
   }
 }
