--- a/src/webhive.frontend/package.json
+++ b/src/webhive.frontend/package.json
@@ -22,6 +22,7 @@
     "@types/webpack": "4.39.1",
     "@types/webpack-dev-server": "3.1.7",
     "@types/webpack-env": "1.14.0",
+    "copy-webpack-plugin": "5.0.4",
     "css-loader": "3.2.0",
     "extract-loader": "3.1.0",
     "file-loader": "4.2.0",
@@ -30,7 +31,7 @@
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "script-ext-html-webpack-plugin": "2.1.4",
     "source-map-loader": "0.2.4",
-    "static-import-webpack-plugin": "file:../../../static-import-webpack-plugin/dist",
+    "static-import-webpack-plugin": "1.1.1",
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-loader": "6.0.4",
