build: Build microfrontend

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "dev": "run-p dev:web",
     "harvest:d": "node --inspect-brk -r ts-node/register/transpile-only src/webhive.harvest/program.ts --ant=webapplog --no-save",
     "harvest": "npx ts-node src/webhive.harvest/program.ts --ant=everylayout",
-    "dev:api": "ts-node-dev --no-deps --transpileOnly -- src/webhive.api/main.ts",
-    "dev:api:d": "ts-node-dev --no-deps --transpileOnly --inspect -- src/webhive.api/main.ts",
+    "dev:api": "node node_modules/ts-node-dev/bin/ts-node-dev --no-deps --transpileOnly -- src/webhive.api/main.ts",
+    "dev:api:d": "node node_modules/ts-node-dev/bin/ts-node-dev --no-deps --transpileOnly --inspect -- src/webhive.api/main.ts",
     "dev:web": "node node_modules/ts-node-dev/bin/ts-node-dev --no-deps --transpileOnly -- src/webhive.web/main.ts",
     "test": "npm run eslint && npm run tscheck && npm run test:cov && npm run typecov",
     "test:r": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r @abraham/reflection --timeout 8s src/**/*.spec.ts",
