--- a/package.json
+++ b/package.json
@@ -7,21 +7,20 @@
   "typings": "index.d.ts",
   "author": "2019",
   "engines": {
-    "node": ">=8.3",
+    "node": ">=12",
     "npm": ">=3"
   },
   "scripts": {
     "dev": "run-p dev:web",
     "harvest:d": "node --inspect-brk -r ts-node/register/transpile-only src/webhive.harvest/program.ts --ant=webapplog --no-save",
-    "harvest": "npx ts-node src/webhive.harvest/program.ts --ant=everylayout",
-    "dev:api": "node node_modules/ts-node-dev/bin/ts-node-dev --no-deps --transpileOnly -- src/webhive.api/main.ts",
-    "dev:api:d": "node node_modules/ts-node-dev/bin/ts-node-dev --no-deps --transpileOnly --inspect -- src/webhive.api/main.ts",
+    "harvest:example": "npx ts-node src/webhive.harvest/program.ts --ant=everylayout --dry-run",
+    "dev:api": "ts-node-dev --no-deps --transpileOnly -- src/webhive.api/main.ts",
+    "dev:api:d": "ts-node-dev --no-deps --transpileOnly --inspect -- src/webhive.api/main.ts",
     "dev:web": "node node_modules/ts-node-dev/bin/ts-node-dev --no-deps --transpileOnly -- src/webhive.web/main.ts",
-    "test": "npm run eslint && npm run tscheck && npm run test:cov && npm run typecov",
+    "test": "npm run eslint && npm run tscheck && npm run test:cov",
     "test:r": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r @abraham/reflection --timeout 8s src/**/*.spec.ts",
     "test:w": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r @abraham/reflection --timeout 8s --watch-extensions ts --watch src/**/*.spec.ts",
     "test:cov": "nyc mocha --timeout 8s src/**/*.spec.ts",
-    "typecov": "type-coverage --detail",
     "test:d": "node --inspect-brk -r ts-node/register/transpile-only -r @abraham/reflection node_modules/mocha/bin/_mocha --no-timeouts --watch-extensions ts --watch src/**/*.spec.ts",
     "tscheck": "echo tscheck... && tsc --noEmit",
     "tscheck:w": "npm run tscheck -- --watch",
@@ -40,73 +39,73 @@
     "typesync": "npx typesync"
   },
   "dependencies": {
-    "@abraham/reflection": "0.5.1",
-    "await-to-js": "2.1.1",
-    "class-transformer": "0.2.3",
-    "class-validator": "0.10.0",
-    "convict": "5.1.0",
-    "dayjs": "1.8.16",
-    "feedparser": "2.2.9",
-    "got": "9.6.0",
-    "koa": "2.8.1",
-    "koa-bodyparser": "4.2.1",
-    "koa-favicon": "2.0.1",
-    "koa-json-error": "3.1.2",
-    "koa-mount": "4.0.0",
-    "koa-static": "5.0.0",
-    "koa-tree-router": "0.5.0",
-    "longjohn": "0.2.12",
-    "mongodb": "3.3.2",
-    "ms": "2.1.2",
-    "njct": "8.0.0",
-    "striptags": "3.1.1",
-    "tslib": "1.10.0",
-    "vhtml": "2.1.0",
-    "yargs": "14.0.0"
+    "@abraham/reflection": "^0.7.0",
+    "await-to-js": "^2.1.1",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.12.2",
+    "convict": "^6.0.0",
+    "dayjs": "^1.8.27",
+    "feedparser": "^2.2.10",
+    "got": "^11.1.4",
+    "koa": "^2.12.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-favicon": "^2.1.0",
+    "koa-json-error": "^3.1.2",
+    "koa-mount": "^4.0.0",
+    "koa-static": "^5.0.0",
+    "koa-tree-router": "^0.6.0",
+    "longjohn": "^0.2.12",
+    "mongodb": "^3.5.7",
+    "ms": "^2.1.2",
+    "njct": "^8.0.0",
+    "striptags": "^3.1.1",
+    "tslib": "^2.0.0",
+    "vhtml": "^2.2.0",
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
-    "@types/convict": "^4.2.1",
-    "@types/eslint": "^6.1.1",
-    "@types/expect": "1.X",
+    "@types/convict": "^5.2.1",
+    "@types/eslint": "^6.8.1",
+    "@types/expect": "^24",
     "@types/feedparser": "^2.2.3",
-    "@types/got": "^9.6.7",
+    "@types/got": "^9.6.11",
     "@types/html-entities": "^1.2.16",
-    "@types/koa": "^2.0.49",
-    "@types/koa-bodyparser": "4.3.0",
+    "@types/koa": "^2.11.3",
+    "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-favicon": "^2.0.19",
     "@types/koa-json-error": "^3.1.2",
-    "@types/koa-mount": "4.0.0",
+    "@types/koa-mount": "^4.0.0",
     "@types/koa-static": "^4.0.1",
-    "@types/mocha": "^5.2.7",
-    "@types/mongodb": "^3.3.1",
-    "@types/ms": "0.7.30",
-    "@types/node": "^12.7.3",
-    "@types/yargs": "13.0.2",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
-    "eslint": "^6.3.0",
-    "eslint-import-resolver-node": "^0.3.2",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-only-warn": "1.0.1",
-    "eslint-plugin-unicorn": "^10.0.0",
-    "expect": "1.X",
-    "html-entities": "^1.2.1",
-    "into-stream": "^5.1.0",
-    "koa-preuse": "0.0.0",
-    "koa-sham": "0.0.11",
-    "mocha": "^6.2.0",
-    "mongodb-memory-server": "5.2.0",
+    "@types/mocha": "^7.0.2",
+    "@types/mongodb": "^3.5.18",
+    "@types/ms": "^0.7.31",
+    "@types/node": "^14.0.5",
+    "@types/yargs": "^15.0.5",
+    "@typescript-eslint/eslint-plugin-tslint": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
+    "eslint": "^7.1.0",
+    "eslint-import-resolver-node": "^0.3.3",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-only-warn": "^1.0.2",
+    "eslint-plugin-unicorn": "^20.0.0",
+    "expect": "^1.X",
+    "html-entities": "^1.3.1",
+    "into-stream": "^5.1.1",
+    "koa-preuse": "^0.0.0",
+    "koa-sham": "^0.0.11",
+    "mocha": "^7.2.0",
+    "mongodb-memory-server": "^6.6.1",
     "npm-run-all": "^4.1.5",
-    "nyc": "^14.1.1",
-    "ts-node": "^8.3.0",
-    "ts-node-dev": "^1.0.0-pre.39",
-    "tslint": "^5.19.0",
-    "tslint-clean-code": "^0.2.9",
+    "nyc": "^15.0.1",
+    "prettier": "2.0.5",
+    "ts-node": "^8.10.1",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "tslint": "^6.1.2",
+    "tslint-clean-code": "^0.2.10",
     "tslint-microsoft-contrib": "^6.2.0",
     "tslint-sonarts": "^1.9.0",
-    "type-coverage": "^2.2.0",
-    "typescript": "3.5.3",
-    "watchexec-bin": "1.0.0"
+    "typescript": "^3.9.3",
+    "watchexec-bin": "^1.0.0"
   },
   "config": {
     "commitizen": {
