--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "dev": "run-p dev:web",
     "harvest:d": "node --inspect-brk -r ts-node/register/transpile-only src/webhive.harvest/program.ts --ant=webapplog --no-save",
     "harvest:example": "npx ts-node src/webhive.harvest/program.ts --ant=everylayout --dry-run",
-    "dev:api": "ts-node-dev --no-deps --transpileOnly -- src/webhive.api/main.ts",
-    "dev:api:d": "ts-node-dev --no-deps --transpileOnly --inspect -- src/webhive.api/main.ts",
-    "dev:web": "node node_modules/ts-node-dev/bin/ts-node-dev --no-deps --transpileOnly -- src/webhive.web/main.ts",
+    "harvest": "ts-node src/webhive.harvest/program.ts",
+    "dev:api": "node-dev --no-deps -- src/webhive.api/main.ts",
+    "dev:api:d": "node-dev --no-deps --inspect -- src/webhive.api/main.ts",
+    "dev:web": "node-dev --no-deps -- src/webhive.web/main.ts",
     "test": "npm run eslint && npm run tscheck && npm run test:cov",
     "test:r": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r @abraham/reflection --timeout 8s src/**/*.spec.ts",
     "test:w": "node node_modules/mocha/bin/_mocha --node_env=test -r ts-node/register/transpile-only -r @abraham/reflection --timeout 8s --watch-extensions ts --watch src/**/*.spec.ts",
-    "test:cov": "nyc mocha --timeout 8s src/**/*.spec.ts",
     "test:d": "node --inspect-brk -r ts-node/register/transpile-only -r @abraham/reflection node_modules/mocha/bin/_mocha --no-timeouts --watch-extensions ts --watch src/**/*.spec.ts",
     "tscheck": "echo tscheck... && tsc --noEmit",
     "tscheck:w": "npm run tscheck -- --watch",
@@ -25,7 +25,6 @@
     "eslint:w": "watchexec -w src \"npm run eslint\"",
     "eslint": "node node_modules/eslint/bin/eslint src/webhive.api src/webhive.web src/webhive.harvest --ext ts",
     "eslint:fix": "eslint src --ext ts --fix",
-    "tslint:fix": "tslint -p tsconfig.json --fix",
     "lint:w": "run-p tsclint:w eslint:w",
     "prepublishOnly": "sed -i -e 's/devDependencies/_devDependencies/g' package.json",
     "copySource": "cp -rv src dist && find dist/src -name '*.spec.ts' | xargs rm -f",
@@ -35,15 +34,15 @@
     "typesync": "npx typesync"
   },
   "dependencies": {
-    "@abraham/reflection": "^0.7.0",
+    "@abraham/reflection": "^0.10.0",
     "await-to-js": "^2.1.1",
-    "class-transformer": "^0.2.3",
-    "class-validator": "^0.12.2",
-    "convict": "^6.0.0",
-    "dayjs": "^1.8.27",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "convict": "^6.2.3",
+    "dayjs": "^1.11.2",
     "feedparser": "^2.2.10",
     "got": "^11.1.4",
-    "koa": "^2.12.0",
+    "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-favicon": "^2.1.0",
     "koa-json-error": "^3.1.2",
@@ -51,56 +50,50 @@
     "koa-static": "^5.0.0",
     "koa-tree-router": "^0.6.0",
     "longjohn": "^0.2.12",
-    "mongodb": "^3.5.7",
-    "ms": "^2.1.2",
-    "njct": "^8.0.0",
-    "striptags": "^3.1.1",
-    "tslib": "^2.0.0",
+    "mongodb": "^4.6.0",
+    "ms": "^2.1.3",
+    "njct": "^8.1.0",
+    "striptags": "^3.2.0",
+    "tslib": "^2.4.0",
     "vhtml": "^2.2.0",
-    "yargs": "^15.3.1"
+    "yargs": "^17.5.1"
   },
   "devDependencies": {
-    "@types/convict": "^5.2.1",
-    "@types/eslint": "^6.8.1",
+    "@types/convict": "^6.1.1",
+    "@types/eslint": "^8.4.2",
     "@types/expect": "^24",
-    "@types/feedparser": "^2.2.3",
-    "@types/got": "^9.6.11",
-    "@types/html-entities": "^1.2.16",
-    "@types/koa": "^2.11.3",
-    "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-favicon": "^2.0.19",
-    "@types/koa-json-error": "^3.1.2",
-    "@types/koa-mount": "^4.0.0",
-    "@types/koa-static": "^4.0.1",
-    "@types/mocha": "^7.0.2",
-    "@types/mongodb": "^3.5.18",
+    "@types/feedparser": "^2.2.5",
+    "@types/got": "^9.6.12",
+    "@types/html-entities": "^1.3.3",
+    "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.7",
+    "@types/koa-favicon": "^2.0.21",
+    "@types/koa-json-error": "^3.1.4",
+    "@types/koa-mount": "^4.0.1",
+    "@types/koa-static": "^4.0.2",
+    "@types/mocha": "^9.1.1",
+    "@types/mongodb": "^4.0.7",
     "@types/ms": "^0.7.31",
-    "@types/node": "^14.0.5",
-    "@types/yargs": "^15.0.5",
-    "@typescript-eslint/eslint-plugin-tslint": "^3.0.0",
-    "@typescript-eslint/parser": "^3.0.0",
-    "eslint": "^7.1.0",
-    "eslint-import-resolver-node": "^0.3.3",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-only-warn": "^1.0.2",
-    "eslint-plugin-unicorn": "^20.0.0",
+    "@types/node": "^17.0.35",
+    "@types/yargs": "^17.0.10",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.15.0",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-only-warn": "^1.0.3",
+    "eslint-plugin-unicorn": "^42.0.0",
     "expect": "^1.X",
     "html-entities": "^1.3.1",
     "into-stream": "^5.1.1",
     "koa-preuse": "^0.0.0",
     "koa-sham": "^0.0.11",
-    "mocha": "^7.2.0",
+    "mocha": "^10.0.0",
     "mongodb-memory-server": "^6.6.1",
     "npm-run-all": "^4.1.5",
-    "nyc": "^15.0.1",
-    "prettier": "2.0.5",
-    "ts-node": "^8.10.1",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "tslint": "^6.1.2",
-    "tslint-clean-code": "^0.2.10",
-    "tslint-microsoft-contrib": "^6.2.0",
-    "tslint-sonarts": "^1.9.0",
-    "typescript": "^3.9.3",
+    "prettier": "2.6.2",
+    "request": "2.88.2",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4",
     "watchexec-bin": "^1.0.0"
   },
   "config": {
